# BOM-Impact-Analyzer-BIA-

./: .env.example  .gitignore  BOM智能管理系统架构设计.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: bom.py  impact.py  overview.py  query.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  bom_item.py  component.py  impact_analysis.py  product.py
backend/app/schemas/: bom.py  impact.py  overview.py  query.py
backend/app/services/: bom_import.py  impact.py  llm.py  natural_query.py  overview.py
backend/tests/: test_bom_import.py  test_health.py  test_impact_search.py  test_natural_query.py  test_overview.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
